--- a/css/style.css
+++ b/css/style.css
@@ -474,6 +474,14 @@ h5{
 
 
 
+
+
+
+
+
+  
+
+
 #Responsive{
 	display: none;
 	width: 48px;
@@ -489,9 +497,6 @@ h5{
 @media screen and (max-width: 768px){
 	*{
 		margin: 0;
-	}
-	html{
-		scroll-behavior: smooth;
 	}
 	#Responsive{
 		display: inline-block;
@@ -566,6 +571,7 @@ h5{
 	color: white;
 	font-size: 75px;
 	font-weight: bold;
+	
 	}
 		
 	.Skills{
@@ -592,6 +598,13 @@ h5{
 		justify-content: center;
 
 	  }
+	  .contact p:nth-child(2){
+		color: white;
+		font-size: 17px;
+		width: 80%;
+		text-align: center;
+		line-height: 26px;
+	}
 	  
 	
 	
